found item 글 등록이 안 됨